[project]
name = "retinal-disease-detection"
version = "1.0.0"
description = "AI-powered retinal disease detection using EfficientNet-B3"
requires-python = ">=3.9"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "streamlit",
    "torch",
    "torchvision",
    "timm",
    "albumentations",
    "opencv-python-headless",
    "pillow",
    "plotly",
    "pandas",
    "numpy",
    "kaggle",
]
